# nrl-quant-desk

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/footy/: config.py
src/footy/clients/: champion.py  odds.py
src/footy/dashboard/: app.py
src/footy/db/: store.py
src/footy/models/: elo.py  implied.py  kelly.py
