[project]
name = "footy"
version = "0.1.0"
description = "NRL Prediction Market Insights"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "polars>=1.0",
    "duckdb>=1.1",
    "streamlit>=1.40",
    "plotly>=5.24",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/footy"]
